<resources>
    <string name="app_name">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profilefragment">ProfileFragment</string>
    <string name="notificationfragment">NotificationFragment</string>
    <string name="homefragment">HomeFragment</string>
    <string name="cartfragment">CartFragment</string>
    <string name="hintPassword">Password</string>
    <string name="create_an">Create an</string>
    <string name="account">Account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="user_name">User name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="login_sign_up">Sign up</string>
    <string name="fp_forgot_password">Forgot Password ?</string>
    <string name="enter_the_email_address_associated_with_your_acount">Enter the email address associated with your acount.</string>
    <string name="password_reset_link_is_sent_to_your_mail">Password reset link is sent to your mail</string>
    <string name="email_address">Email Address</string>
    <string name="send">SEND</string>
</resources>